--- a/bootstrap/profile.html
+++ b/bootstrap/profile.html
@@ -8,10 +8,10 @@
 <body>
 	<div class="row text-center p-2 m-2">
 		<div class="card text-center col-xs-12 col-md-4">
-	    <img src="logo.png" alt="person logo" width="500" height="600">
+	    <img src="img/k2.png">
 	    <div class="card-body">
-	    	<h1 class="card-title">Sindhu</h1>
-	    	<h3 class="card-text"> B.TECH C.S.E</h3>
+	    	<h1 class="card-title">Swami</h1>
+	    	<h3 class="card-text"> Multi Skill Trainer</h3>
 	    	<button class="btn btn-primary">View</button>
 	    </div>
         </div>
@@ -21,8 +21,8 @@
 <div class="card text-center  col-xs-12 col-md-4">
 	    <img src="img/k2.png">
 	    <div class="card-body">
-	    	<h1 class="card-title">Kavitha</h1>
-	    	<h3 class="card-text"> B.TECH EEE</h3>
+	    	<h1 class="card-title">Kalyan</h1>
+	    	<h3 class="card-text"> Multi Skill Trainer</h3>
 	    	<button class="btn btn-warning">View</button>
 	    </div>
         </div>
@@ -32,8 +32,8 @@
         <div class="card text-center col-xs-12 col-md-4">
 	    <img src="img/g1.png">
 	    <div class="card-body">
-	    	<h1 class="card-title">Chandana</h1>
-	    	<h3 class="card-text">B.TECH ECE</h3>
+	    	<h1 class="card-title">Gayatri</h1>
+	    	<h3 class="card-text"> Multi Skill Trainer</h3>
 	    	<button class="btn btn-success">View</button>
 	    </div>
         </div>
