--- a/bootstrap/website.html
+++ b/bootstrap/website.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Website</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Website</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -12,57 +12,82 @@
 </head>
 <body>
 <nav class="navbar navbar-expand bg-dark">
-<ul class="navbar-nav">
-<li class="nav-item p-1 navbar-brand text-warning">Home</li>
-<li class="nav-item p-1 text-warning">Profile</li>
-<li class="nav-item p-1 text-warning">About</li>
-</ul>
-<div class="dropdown">
-<button class="dropdown-toggle btn-warning" data-toggle="dropdown">
-<ul class="dropdown-menu">
-<li class="dropdown-item">Profile</li>
-<li class="dropdown-item">About</li>
+	<ul class="navbar-nav">
+		<li class="nav-item p-1 navbar-brand text-warning">Home</li>
+		<li class="nav-item p-1 text-warning">Profile</li>
+		<li class="nav-item p-1 text-warning">About</li>
+	</ul>
+	<div class="dropdown">
+		<button class="dropdown-toggle btn-warning" data-toggle="dropdown">
+			<ul class="dropdown-menu">
+			<li class="dropdown-item">Profile</li>
+			<li class="dropdown-item">About</li>
 
-</ul>
-View
-</button>
-
-</div>
+		</ul>
+		View
+		</button>
+		
+	</div>
 
 </nav>
+
 <!--  profile Section -->
 
-<div class="container p-3">
-<div class="row">
-<div class="col-sm-12 col-md-6">
-<img src="img/apssdc_final.png" class="img-rounded" style="border: 2px solid blue">
+
+	<div class="container p-3">
+		<div class="row">
+			<div class="col-sm-12 col-md-6 text-center">
+				<img src="img/apssdc.png" class="img-rounded" style="border: 2px solid blue">
+			</div>
+			<div class="col-sm-12 col-md-6 text-center">
+				<h1>We <span class="text-primary">Kalyan,Gayatri,<br>Swami</span> From APSSDC </h1>
+				<h3>Multi Skill Trainers</h3>
+				<h4>APSSDC</h4>
+			</div>
+		</div>
+	</div>
+<!-- profile card Section -->
+
+<div class="container-fulid p-3">
+	<div class="container">
+		<div class="text-center">
+			<h1 class="text-success">My Desiging</h1>
+			<p class="lead text-primary">We are working APSSDC ReactJs Team wedeal with Online class using Goto Meeting my weapons are HTML CSS JS Bootstrap, REACTJS</p>
+		</div>
+		<div class="row  text-center">
+			<div class="col-sm-12 col-md-4">
+			<div class="card text-center py-3  p-3 m-2">
+				<img src="img/k2.png">
+				<h1 class="card-title">Kalyan</h1>
+				<h3 class="card-text">Online Traning</h3>
+				<button class="btn-warning">View</button>
+			</div>
+		</div>
+			<!-- Card-2 -->
+			<div class="card text-center py-3 p-3 m-2">
+				<img src="img/k2.png">
+				<h1 class="card-title">Kalyan</h1>
+				<h3 class="card-text">Online Traning</h3>
+				<button class="btn-success">View</button>
+			</div>
+			<!-- Card-3 -->
+			<div class="card text-center py-3 p-3 m-2">
+				<img src="img/k2.png">
+				<h1 class="card-title">Kalyan</h1>
+				<h3 class="card-text">Online Traning</h3>
+				<button class="btn-primary">View</button>
+			</div>
+		</div>
+		</div>
+	</div>
 </div>
-<div class="col-sm-12 col-md-6 text-center">
-<h1>We <span class="text-primary">Kalyan,Gayatri,<br>Swami</span> From APSSDC </h1>
-<h3>Multi Skill Trainers</h3>
-<h4>APSSDC</h4>
 </div>
-</div>
-</div>
-<div class="row">
-	<div class="row-md-4 row-sm-12">
-<div class="card text-center">
-<img src="img/logo.png">
-<h1 class="card-title">Kalyan</h1>
-<h3 class="card-text">Online Traning</h3>
-</div>
-</div>
-<div class="card text-center">
-<img src="img/logo.png">
-<h1 class="card-title">Kalyan</h1>
-<h3 class="card-text">Online Traning</h3>
-</div>
-<div class="card text-center">
-<img src="img/logo.png">
-<h1 class="card-title">Kalyan</h1>
-<h3 class="card-text">Online Traning</h3>
-</div>
+<!-- Footer -->
+<div class="footer text-center bg-danger">
+	<div class="col-sm-12 text-center">
+		<h1 class="text-center">All Copy Rights are Reviced</h1>
+	</div>
 </div>
 
 </body>
-</html> 
+</html>
