--- a/profile/h1.html.html
+++ b/profile/h1.html.html
@@ -9,7 +9,7 @@
             flex-wrap: wrap;
       }
       #left{
-            width:28%;
+            width: 28%;
       }
       .card{
             border:2px solid gray;
@@ -20,14 +20,14 @@
             font-family: sans-serif;
       }
       #right{
-            width:70%;
+            width: 70%;
             border: 1px solid black;
 
 
 
       }  
 </style>
-<script type="text/javascript" src="index.js"></script>
+<script type="text/javascript" src="profile.js"></script>
 </head>
 <body>
 <div id="main">
